# zeither

./: .gitignore  README.md  README.rst  pyproject.toml
tests/: test_either.py
zeither/: __init__.py  either.py
