[tool.poetry]
name = "either"
version = "0.1.0"
description = ""
authors = ["Thiago Brito <thiago.britos@berghem.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
flake8 = "^3.9.0"
black = "^20.8b1"
safety = "^1.10.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
